--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
           cp -rf README.md etc docs
 
           docker login docker.pkg.github.com --username $GITHUB_ACTOR --password ${{ secrets.GITHUB_TOKEN }}
-          docker run --rm -v ${PWD}:/docs docker.pkg.github.com/pixisoft/docs-image -- build
+          docker run --rm -v ${PWD}:/docs docker.pkg.github.com/pixisoft/docs-image/docs-image -- build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
