--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,16 @@ nav:
   - Home:
     - Overview: README.md
   - UnityAS:
+    - Afterimage: UnityAS/Afterimage/README.md
+    - Inspect_Html: UnityAS/Inspect_Html/README.md
+    - Inspect_Ini: UnityAS/Inspect_Ini/README.md
+    - Inspect_Json: UnityAS/Inspect_Json/README.md
+    - Inspect_Xml: UnityAS/Inspect_Xml/README.md
+    - Inspect_Yaml: UnityAS/Inspect_Yaml/README.md
     - NovBundle: UnityAS/NovBundle/README.md
+    - PackageExporter: UnityAS/PackageExporter/README.md
+    - sHierarchy: UnityAS/sHierarchy/README.md
+    - WatchLog: UnityAS/WatchLog/README.md
 
 extra_css:
   - stylesheets/extra.css
