--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: docstr - A document string minor mode
+site_name: Pixisoft Documentation
 site_description: Document String tool for Emacs
 site_url: https://pixisoft.github.io/
 site_author: pixisoft.tw@gmail.com
