--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ extra_css:
   - stylesheets/extra.css
 
 theme:
-  name: windmill
+  name: ivory
   logo: etc/logo.png
   favicon: etc/favicon.ico
   icon:
