--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ extra_css:
   - stylesheets/extra.css
 
 theme:
-  name: ivory
+  name: bootstrap
   logo: etc/logo.png
   favicon: etc/favicon.ico
   icon:
