--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
     - WatchLog: UnityAS/WatchLog/README.md
 
 extra_css:
-  - stylesheets/extra.css
+  - _stylesheets/extra.css
 
 theme:
   name: 'rtd-dropdown'
