--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,14 +14,10 @@ jobs:
 
       - name: MkDocs
         run: |
-          cp -rf README.md docs
+          cp -rf README.md img docs
 
           docker login docker.pkg.github.com --username $GITHUB_ACTOR --password ${{ secrets.GITHUB_TOKEN }}
           docker run --rm -v ${PWD}:/docs docker.pkg.github.com/pixisoft/docs-image/docs-image -- build
-
-      - name: Overwrite files
-        run: |
-          cp -rf img
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
