--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: MkDocs
         run: |
-          cp -rf README.md img docs
+          cp -rf README.md etc docs
 
           docker login docker.pkg.github.com --username $GITHUB_ACTOR --password ${{ secrets.GITHUB_TOKEN }}
           docker run --rm -v ${PWD}:/docs docker.pkg.github.com/pixisoft/docs-image/docs-image -- build
