--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Pixisoft Documentation
-site_description: Document String tool for Emacs
+site_description: Docuemtations for Pixisoft
 site_url: https://pixisoft.github.io/
 site_author: pixisoft.tw@gmail.com
 site_favicon: etc/favicon.ico
@@ -24,7 +24,6 @@ extra_css:
 theme:
   name: 'rtd-dropdown'
   logo: etc/logo.png
-  favicon: etc/favicon.ico
   icon:
     repo: fontawesome/brands/github
   features:
