--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,9 @@ site_favicon: etc/favicon.ico
 
 repo_name: https://pixisoft.github.io/
 
+copyright: '© 2021 Pixisoft Inc. All rights reserved. 
+All trademarks referenced herein are the properties of their respective owners.'
+
 nav:
   - Home:
     - Overview: README.md
