--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Pixisoft Documentation
 site_description: Docuemtations for Pixisoft
-site_author: pixisoft.tw@gmail.com
+site_author: 'Pixisoft'
 site_favicon: etc/favicon.ico
 
 repo_name: GitHub
