--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_author: 'Pixisoft'
 site_favicon: etc/favicon.ico
 
 repo_name: GitHub
-repo_url: https://pixisoft.github.io/
+repo_url: https://github.com/Pixisoft
 
 copyright: (c) 2021 Pixisoft Inc. All rights reserved. 
 
