--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'Pixisoft/Afterimage'
+          lfs: true
 
       - name: Checkout self
         uses: actions/checkout@v2
