--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Tree
-        run: cd / && tree
+        run: cd ${{ env.GITHUB_WORKSPACE }} && tree
 
       - name: Grab all documents
         run: |
