--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
         repo:
           - Afterimage
