--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Push back
         run: |
+          git pull
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
